# shdrt

./: .gitignore  CMakeLists.txt
docs/: Doxyfile
src/: category_flags.h  common.h  component_id.c  component_id.h  intent.c  intent.h  intent_flags.h  main.c  package.h  package_id.h  worker.c  worker.h
src/intent/: action.c  action.h  category.h  flags.h  intent.c  intent.h
src/package/: package.c  package.h  package_id.c  package_id.h
src/service/: bind_flags.c  bind_flags.h  binder.h  binder_map.c  binder_map.h  connection.h  connection_binder_map.c  connection_binder_map.h  connection_intent_map.c  connection_intent_map.h  connection_map.c  connection_map.h  context.h  context_map.c  context_map.h  continuation_mode.h  manager.c  manager.h  map.c  map.h  remote_interface.h  service.c  service.h  start_flags.h  start_id.h  start_id_map.c  start_id_map.h  stop_callback.h
src/worker/: manager.h  worker.c  worker.h
tests/: CMakeLists.txt  common_count.c  component_id.c  intent.c  math.c  service.c  service_binder_map.c  service_connection_map.c  service_context.c  service_manager.c  service_map.c  service_start_id_map.c  worker.c
